# mentipy

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
doc/: .gitignore  Makefile  abstract.tex  bibliography.bib  mentipy.nw  preamble.tex
src/: .gitignore
src/mentipy/: Makefile  cli.nw  latex.nw  mentipy.nw  network.nw  public.nw  qr.nw  questions.nw  server.nw  store.nw  tutorials.nw  venv.nw
tests/: Makefile
