[project]
name = "mentipy"
version = "0.1"
description = "Lightweight classroom-polling library"
authors = [
    {name = "Daniel Bosk", email = "dbosk@kth.se"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "click (>=8.3.3,<9.0.0)",
    "markdown-it-py (>=3.0.0,<4.0.0)",
    "segno (>=1.6.6,<2.0.0)",
    "typer (>=0.25.1,<0.26.0)",
    "typerconf (>=2.12,<3.0)",
]

[project.scripts]
mentipy = "mentipy.cli:main"

[project.optional-dependencies]
public = ["miniupnpc (>=2.2.5,<3.0.0)"]


[tool.poetry]
packages = [{include = "mentipy", from = "src"}]
include = [
  { path = "src/**/*.py", format = "wheel" },
]
exclude = [
  "src/mentipy/.gitignore",
  "src/mentipy/Makefile",
  "src/mentipy/*.nw",
  "src/mentipy/*.tex",
  "src/mentipy/CLAUDE.md",
  "src/mentipy/ltxobj",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
